Add NetUtils, refactor files