@@ -10,16 +10,21 @@ import java.util.*;
 
 public class FilesContent {
     public static void main(String[] args) {
-        args = new String[]{"d:/tmp", "d:/tmp1/result.txt"};
+        args = new String[]{"d:/tmp", "result.txt"};
         Path rootPath = Paths.get(args[0]);
-        Path resultFileAbsolutePath = Paths.get(args[1]);
-        Path destinationFile = Path.of(resultFileAbsolutePath.getParent().toString(), "/allFilesContent.txt");
+        Path destinationFile = Paths.get(rootPath.resolve(args[1]).toUri());
         try {
             Files.deleteIfExists(destinationFile);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        writeFilesContent(walkDirTree(rootPath), destinationFile);
+        FoundFiles fileVisitor = new FoundFiles();
+        fileVisitor.setMinSize(10);
+        fileVisitor.setMaxSize(200);
+        fileVisitor.setPartOfContent("");
+        fileVisitor.setPartOfName("txt");
+
+        writeFilesContent(walkDirTree(rootPath, fileVisitor), destinationFile);
     }
 
     /**
@@ -29,6 +34,7 @@ public class FilesContent {
         for (Path file : files) {
             try (FileInputStream fileInputStream = new FileInputStream(file.toFile());
                  FileOutputStream fileOutputStream = new FileOutputStream(resultFile.toFile(), true)) {
+                if (Files.isSameFile(file, resultFile)) continue; //не записываем содержимое исходного файла в себя
                 while (fileInputStream.available() > 0) {
                     fileOutputStream.write(fileInputStream.read());
                 }
@@ -38,22 +44,16 @@ public class FilesContent {
                 throw new RuntimeException(e);
             }
         }
-        System.out.println("all files: " + files.size());
+        System.out.printf("%d files writing to %s\n", files.size(), resultFile);
     }
 
     /**
      * обход дерева каталогов начиная с {@code startDir} <p>
-     * возвращает TreeSet найденых файлов в соответствие с параметрами заданными в {@code GetSetOfFiles}<p>
+     * возвращает List найденых файлов в соответствие с параметрами заданными в {@code FoundFiles}<p>
      * который наследуется от SimpleFileVisitor и переопределяет его методы
      */
-    static List<Path> walkDirTree(Path startDir) {
-        List<Path> resultFiles = new ArrayList<>();
-        GetSetOfFiles fileVisitor = new GetSetOfFiles(resultFiles);
-        fileVisitor.setMinSize(7);
-        fileVisitor.setMaxSize(78);
-        fileVisitor.setPartOfContent("ir");
-        fileVisitor.setPartOfName("read");
-
+    static List<Path> walkDirTree(Path startDir, FoundFiles fileVisitor) {
+        List<Path> resultFiles = fileVisitor.getFoundFiles();
         EnumSet<FileVisitOption> options = EnumSet.of(FileVisitOption.FOLLOW_LINKS);
         try {
             Files.walkFileTree(startDir, options, Integer.MAX_VALUE, fileVisitor);
